# recommender-systems-ws

./: .gitignore  Makefile  README.md  _gen_new_nbs.py  guide.md  pyproject.toml
data/: sample_ml25m.py
data/ml-25m-sample/: items.parquet
notebooks/: 00_velkommen.ipynb  01_content_based.ipynb  02_collaborative_filtering.ipynb  03_hybrid_systems.ipynb  04_ship_decision.ipynb  05_veien_videre.ipynb
outputs/: slides-check.html
slides/: slides.md
src/: data.py  eval.py  fairness.py  metrics.py  rerank.py  split.py
src/recommenders/: als.py  content_based.py  embedding_retrieval.py  item_item.py  popularity.py  session.py
xai-example/: 01_the_case_file.ipynb  02_global_explanations.ipynb  03_local_explanations.ipynb  04_when_explanations_lie.ipynb  05_writing_the_verdict.ipynb  xai-workshop.md
