[project]
name = "recsys-workshop"
version = "2.0.0"
description = "StreamNord — Recommender Systems Workshop (3.5h)"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "implicit>=0.7",
    "faiss-cpu>=1.7",
    "pyarrow>=14.0",
    "jupyterlab>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
